# fastapi-crud-template

./: pyproject.toml
car_api/: app.py
car_api/models/: users.py
car_api/routers/: users.py
car_api/schemas/: users.py
