[project]
name = "car-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Eduardo Rodrigues dos Santos",email = "carlos.rodrigues@recife.pe.gov.br"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
